Add new field in CR schema for BQU
