# pkg/apiserver/docs/swagger.json
@@ -483,11 +483,20 @@
                 "clusterCapacity": {
                     "type": "integer"
                 },
+                "clusterCurrentBqu": {
+                    "type": "integer"
+                },
+                "clusterMaxBqu": {
+                    "type": "integer"
+                },
                 "clusterProvisioning": {
                     "type": "integer"
                 },
                 "lastUpdated": {
                     "type": "string"
+                },
+                "maxBquPerRequest": {
+                    "type": "integer"
                 }
             }
         },
@@ -660,7 +669,7 @@
             "type": "object",
             "properties": {
                 "domainName": {
-                    "description": "Name of the domain\n+kubebuilder:validation:Required",
+                    "description": "Name of the domain",
                     "type": "string"
                 },
                 "ecrIamArns": {
@@ -682,14 +691,14 @@
                     "type": "string"
                 },
                 "lbEndpoints": {
-                    "description": "Load balancer endpoints\n+kubebuilder:validation:Required",
+                    "description": "Load balancer endpoints",
                     "type": "object",
                     "additionalProperties": {
                         "type": "string"
                     }
                 },
                 "loggingEndpoints": {
-                    "description": "Logging endpoints\n+kubebuilder:validation:Required",
+                    "description": "Logging endpoints",
                     "type": "array",
                     "items": {
                         "type": "object",
